# buildstock-query

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
.github/workflows/: add_to_project.yml  testing.yml
buildstock_query/: __init__.py  aggregate_query.py  aggregate_query.pyi  helpers.py  main.py  query_core.py  report_query.py  savings_query.py  savings_query.pyi  sql_cache.py  utility_query.py  utility_query.pyi
buildstock_query/db_schema/: comstock_oedi_agg_state_and_county.toml  comstock_oedi_state_and_county.toml  db_schema_model.py  resstock_oedi.toml  resstock_oedi_new.toml  resstock_oedi_vu.toml
buildstock_query/schema/: query_params.py  run_params.py  utilities.py
buildstock_query/tools/: set_cover.py  upgrades_analyzer.py
buildstock_query/tools/upgrades_visualizer/: viz_data.py
example_usage/: basic_usage_oedi.ipynb  comstock_oedi_state_and_county.ipynb
tests/: README.md  backfill_snapshot_costs.py  cleanup_stale_caches.py  conftest.py  example_notebook_builder.py  refresh_caches.py  test_BuildStockQuery.py  test_BuildStockSavings.py  test_BuildStockUtility.py  test_invariants.py  test_query.py  test_query_core_cache_paths.py  test_query_snapshots.py  test_schema_unique_keys.py  test_set_cover.py  test_sql_cache.py  test_utility.py
tests/example_notebooks/: annual_comstock_oedi.ipynb  annual_comstock_oedi_agg.ipynb  annual_resstock_oedi.ipynb  applied_only_comstock_oedi.ipynb  applied_only_comstock_oedi_agg.ipynb  applied_only_resstock_oedi.ipynb  building_ids_comstock_oedi.ipynb  building_ids_comstock_oedi_agg.ipynb  building_ids_resstock_oedi.ipynb  building_kws_comstock_oedi.ipynb  building_kws_comstock_oedi_agg.ipynb  building_kws_resstock_oedi.ipynb  calculated_column_comstock_oedi.ipynb  calculated_column_comstock_oedi_agg.ipynb  calculated_column_resstock_oedi.ipynb  helpers_comstock_oedi.ipynb  helpers_comstock_oedi_agg.ipynb  helpers_resstock_oedi.ipynb  invariants_three_way_comstock_oedi.ipynb  invariants_three_way_comstock_oedi_agg.ipynb  invariants_three_way_resstock_oedi.ipynb  mapped_column_comstock_oedi.ipynb  mapped_column_comstock_oedi_agg.ipynb  mapped_column_resstock_oedi.ipynb  report_comstock_oedi.ipynb  report_comstock_oedi_agg.ipynb  report_resstock_oedi.ipynb  restrict_avoid_comstock_oedi.ipynb  restrict_avoid_comstock_oedi_agg.ipynb  restrict_avoid_resstock_oedi.ipynb  savings_comstock_oedi.ipynb  savings_comstock_oedi_agg.ipynb  savings_resstock_oedi.ipynb  timeseries_comstock_oedi.ipynb  timeseries_comstock_oedi_agg.ipynb  timeseries_resstock_oedi.ipynb  utility_resstock_oedi.ipynb
tests/local_only/: test_full_data_methods.py
tests/query_snapshots/: README.md  annual.json  applied_only.json  building_ids.json  building_kws.json  calculated_column.json  helpers.json  invariants_three_way.json  mapped_column.json  report.json  restrict_avoid.json  savings.json  timeseries.json  utility.json
tests/query_snapshots/comstock_oedi/: annual.json  applied_only.json  restrict_avoid.json  savings.json  timeseries.json
tests/query_snapshots/comstock_oedi_data/: all_buildings_upgrade1_annual.parquet  annual_electricity_by_vintage_nosort.parquet  annual_nonzero_count_natural_gas.parquet  annual_totals_by_building_type.parquet  avoid_building_type.parquet  bldg_ids_applied_in_1_and_2.parquet  inv_baseline_ts_year_by_building_type.parquet  inv_upgrade1_annual_by_building_type.parquet  inv_upgrade1_applied_annual_by_building_type.parquet  inv_upgrade1_applied_in_1_2_annual_by_building_type.parquet  inv_upgrade1_applied_in_1_2_ts_monthly_by_building_type.parquet  inv_upgrade1_applied_in_1_2_ts_year_by_building_type.parquet  inv_upgrade1_applied_ts_monthly_by_building_type.parquet  inv_upgrade1_applied_ts_year_by_building_type.parquet  mapped_column_simple_bldg_type_group_by.parquet  restrict_single_state.parquet  restrict_state_plus_vintage.parquet  (+7 more)
tests/reference_files/: small_run_baseline_20230810_100_query_cache.pkl
(+144 files in other folders)
