[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buildstock_query"
version = "0.4.0"
description = "Python library for querying and analyzing ResStock and ComStock"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
authors = [
    { name = "Rajendra Adhikari", email = "Rajendra.Adhikari@nrel.gov" },
]
dependencies = [
    "pandas >= 2.0.0",
    "polars",
    "pyarrow >= 14.0.1",
    "pyathena >= 3.19.0",
    "SQLAlchemy >= 2.0.0",
    "sqlalchemy2-stubs",
    "pandas-stubs",
    "inquirerpy >= 0.3.4",
    "types-PyYAML >= 6.0.12.2",
    "pydantic>=2",
    "PyYAML",
    "tabulate",
    "toml",
    "requests",
    "sqlglot",
    "filelock",
    "pyparsing",
]

[project.optional-dependencies]
full = [
    "dash-bootstrap-components >= 1.2.1",
    "dash-extensions >= 0.1.6",
    "dash-mantine-components == 0.10.2",
    "dash-iconify >= 0.1.2",
    "plotly >= 5.10.0",
    "dash >= 2.6.2",
]

[dependency-groups]
dev = [
    "pytest >= 7.1.3",
    "flake8 >= 5.0.4",
    "pdoc3 >= 0.10.0",
    "dash-bootstrap-components >= 1.2.1",
    "dash-extensions >= 0.1.6",
    "dash-mantine-components == 0.10.2",
    "dash-iconify >= 0.1.2",
    "coverage >= 6.5.0",
    "plotly >= 5.10.0",
    "dash >= 2.6.2",
]

[project.scripts]
upgrades_analyzer = "buildstock_query.tools.upgrades_analyzer:main"
upgrades_visualizer = "buildstock_query.tools.upgrades_visualizer:main"

[project.urls]
Homepage = "https://github.com/NREL/buildstock-query"
Documentation = "https://github.com/NREL/buildstock-query/wiki"
Repository = "https://github.com/NREL/buildstock-query"

[tool.hatch.build.targets.wheel]
packages = ["buildstock_query"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests",
    "docs",
    "example_usage",
    "htmlcov",
    "build",
    ".bsq_cache*",
    ".history",
    "*.ipynb",
    "*.coverage",
    ".git",
    ".github",
    ".vscode",
    ".pytest_cache",
]
